arrow spacing fixed

--- a/css/layout/style.css
+++ b/css/layout/style.css
@@ -10345,7 +10345,7 @@ height: 300px;
   position: absolute;
   cursor: pointer;
   top: 40%;
- right: 0;
+ right: 10px;
  font-size: 50px;
  font-weight: 800;
  z-index: 50;
@@ -10358,14 +10358,22 @@ height: 300px;
  opacity: 0;
  cursor: pointer;
   top: 40%;
- left: 0;
+ left: 10px;
  font-size: 50px;
  font-weight: 800;
  z-index: 50;
  }
  #bottom_gallery_container:hover #arrow-left{
-  opacity: 1;
+  opacity: .7;
  }
   #bottom_gallery_container:hover #arrow-right{
-  opacity: 1;
+  opacity: .7;
  }
+ @media screen and (max-width: 768px){
+  #arrow-left{
+    opacity: .7;
+   }
+   #arrow-right{
+    opacity: .7;
+   }
+  }
